[B]1.0.0[/B]
- Detached web application from Domotion application to be able to deploy externally and run multiple web applications simultaneously.
- Designed communication channel between Domotion and web app.
- Added script to run web applications during startup (however Domotion will work without any webapp running)
- Configure web applications with configuration file DomoWeb.xml (Removed SSL and port from settings)
- Adding configuration for deploying the webserver on Apache2
- Added script to easily setup Apache2 webserver(s) from DomoWeb.xml
- Added updater for database to automatically update the database on changes without loosing your setup or settings
- Updated install script
- Added prefix for web location
- Added possiblity to run scripts as actuator
- Updated restart procedure to be able to restart webservers during restart

[B]0.9.9[/B]
- Fixed small bug to make it possible for a timer to be active during home-day and trip-day

[B]0.9.8[/B]
- Endurance tests executed
- Fixed typo in holidays web-access
- Do not enter error mode if a 'SetOnce' actuator is set twice. Just don't execute and log info
- Fixed timer overflow (at end of day)
- Fixed deletion of offset timers during update (they are only deleted when settings change or fired)
- Fixed dependency issue
- Fixed typo in settings description
- Added reboot and shutdown options to reboot or shutdown the system from the web interface

[B]0.9.7[/B]
- Hardware tests executed
- Updated StatusLightFlash setting on switched on actuators during startup
- Fixed behavior on adding sensor, toggle setting
- Added yellow status light during webaccess
- On devices webview for blind control set up/down instead of on/ off

[B]0.9.6[/B]
- Fixed bug in updating sinrise/ sunset timer every 2 seconds during the first minute of a new day
- Fixed bug in GPIO callbacks
- Fixed bug in changing settings
- Fixed bug in lirc send interface
- Added capturing of software errors and tracebacks